--- a/consumer/src/main/resources/application.yaml
+++ b/consumer/src/main/resources/application.yaml
@@ -19,7 +19,7 @@ spring:
     username: ${SPRING_DATASOURCE_USERNAME}
     password: ${SPRING_DATASOURCE_PASSWORD}
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show-sql: true
   h2:
     console:
